azure/k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phoenix-app-service
spec:
  type: NodePort
  selector:
    app: phoenix-app
  ports:
  - name : http
    protocol: TCP
    port: 80
    targetPort: 5000  
    nodePort: 30080
  - name : metrics
    protocol: TCP
    port: 8080
    targetPort: 8000
