azure/k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phoenix-app-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: phoenix-aks.abhishek0609om.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: phoenix-app-service
              port:
                number: 80
